erDiagram
    USER {
        string id PK
        string name
        string email
        date subscription_date
        string browser
        string device_info
        string push_token
        boolean opted_in
        date last_activity
        json custom_attributes
    }

    SEGMENT {
        string id PK
        string name
        string description
        json filter_criteria
        int user_count
        date created_at
        date updated_at
    }

    TEMPLATE {
        string id PK
        string name
        string title
        string body
        string image_url
        string action_url
        json dynamic_variables
        date created_at
        date updated_at
    }

    CAMPAIGN {
        string id PK
        string name
        string description
        date scheduled_time
        string status
        date created_at
        date updated_at
        boolean is_recurring
        string recurrence_pattern
        string campaign_type
    }

    NOTIFICATION {
        string id PK
        string campaign_id FK
        string user_id FK
        string template_id FK
        string title
        string body
        string image_url
        string action_url
        json personalized_data
        date sent_at
        string delivery_status
        date delivered_at
        date opened_at
        date clicked_at
        json device_info
    }

    WEBHOOK {
        string id PK
        string name
        string endpoint_url
        string event_type
        string secret_key
        boolean is_active
        date created_at
        date last_triggered_at
    }

    TRIGGER {
        string id PK
        string name
        string event_type
        json conditions
        string template_id FK
        string segment_id FK
        int delay_minutes
        boolean is_active
        date created_at
    }

    AB_TEST {
        string id PK
        string campaign_id FK
        string name
        string description
        int variant_count
        string winning_criteria
        date start_date
        date end_date
    }

    TEST_VARIANT {
        string id PK
        string ab_test_id FK
        string template_id FK
        string name
        int sent_count
        int opened_count
        int clicked_count
    }

    ANALYTICS {
        string id PK
        string notification_id FK
        string campaign_id FK
        string user_id FK
        boolean delivered
        boolean opened
        boolean clicked
        date event_time
        string user_action
        string conversion_type
        float conversion_value
    }

    CDP_INTEGRATION {
        string id PK
        string user_id FK
        json user_profile_data
        json behavioral_data
        date last_synced
    }

    CEP_DECISION {
        string id PK
        string user_id FK
        string campaign_id FK
        string selected_channel
        float channel_score
        json decision_factors
        date decision_time
    }

    USER ||--o{ NOTIFICATION : "receives"
    USER }|--o{ SEGMENT : "belongs to"
    SEGMENT ||--o{ CAMPAIGN : "targeted by"
    TEMPLATE ||--o{ NOTIFICATION : "formats"
    CAMPAIGN ||--o{ NOTIFICATION : "sends"
    CAMPAIGN ||--o{ AB_TEST : "evaluates"
    AB_TEST ||--o{ TEST_VARIANT : "contains"
    TEMPLATE ||--o{ TEST_VARIANT : "used in"
    NOTIFICATION ||--o{ ANALYTICS : "generates"
    CAMPAIGN ||--o{ ANALYTICS : "tracks"
    USER ||--o{ ANALYTICS : "produces"
    TRIGGER ||--o{ NOTIFICATION : "creates"
    TRIGGER }o--|| TEMPLATE : "uses"
    TRIGGER }o--|| SEGMENT : "targets"
    WEBHOOK }|--o{ NOTIFICATION : "processes"
    USER ||--o{ CDP_INTEGRATION : "linked to"
    USER ||--o{ CEP_DECISION : "evaluated for"
    CAMPAIGN ||--o{ CEP_DECISION : "optimized by"
